# ProjectNeon

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  PERFORMANCE.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  pom.xml
.github/workflows/: ci.yml  deploy-central.yml
docs/: CNAME  JNI_IMPLEMENTATION.md  ReliabilityGuide.md  allclasses-index.html  allpackages-index.html  constant-values.html  deprecated-list.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  search.html  serialized-form.html  type-search-index.js
docs/com/quietterminal/projectneon/: PublicAPI.html  package-summary.html  package-tree.html  package-use.html
docs/com/quietterminal/projectneon/class-use/: PublicAPI.html
docs/com/quietterminal/projectneon/client/: NeonClient.TriConsumer.html  NeonClient.html  package-summary.html  package-tree.html  package-use.html
docs/com/quietterminal/projectneon/core/: AbstractLifecycle.html  AckStateMachine.PacketState.html  AckStateMachine.PendingPacket.html  AckStateMachine.ProcessResult.html  AckStateMachine.html  Backpressure.Listener.html  Backpressure.Signal.html  Backpressure.State.html  Backpressure.html  BatchAckManager.html  ByteBufferPool.html  EventDrivenReceiver.html  GamePacketDescriptor.Builder.html  GamePacketDescriptor.html  GamePacketRegistry.html  Lifecycle.State.html  Lifecycle.StateChangeListener.html  Lifecycle.html  NeonConfig.Builder.html  NeonConfig.html  NeonMetrics.Snapshot.html  NeonMetrics.html  NeonPacket.html  NeonSocket.ReceivedNeonPacket.html  NeonSocket.ReceivedPacket.html  NeonSocket.html  PacketHeader.html  PacketPayload.Ack.html  PacketPayload.ConnectAccept.html  PacketPayload.ConnectDeny.html  PacketPayload.ConnectRequest.html  PacketPayload.DisconnectNotice.html  PacketPayload.GamePacket.html  PacketPayload.PacketTypeEntry.html  PacketPayload.PacketTypeRegistry.html  PacketPayload.Ping.html  PacketPayload.Pong.html  PacketPayload.ReconnectRequest.html  PacketPayload.SessionConfig.html  PacketPayload.html  (+26 more)
docs/com/quietterminal/projectneon/exceptions/: ConnectionTimeoutException.html  NeonException.html  PacketValidationException.html  SessionNotFoundException.html  package-summary.html  package-tree.html  package-use.html
docs/com/quietterminal/projectneon/host/: NeonHost.TriConsumer.html  NeonHost.html  package-summary.html  package-tree.html  package-use.html
docs/com/quietterminal/projectneon/jni/: NeonClientJNI.html  NeonHostJNI.html  package-summary.html  package-tree.html  package-use.html
docs/com/quietterminal/projectneon/relay/: NeonRelay.html  RelaySemantics.PeerLookup.html  RelaySemantics.RoutingDecision.Broadcast.html  RelaySemantics.RoutingDecision.RelayHandled.html  RelaySemantics.RoutingDecision.Unicast.html  RelaySemantics.RoutingDecision.Unroutable.html  RelaySemantics.RoutingDecision.html  RelaySemantics.html  package-summary.html  package-tree.html  package-use.html
docs/com/quietterminal/projectneon/util/: LoggerConfig.html  NeonLogFormatter.html  PerformanceMetrics.LatencyStats.html  PerformanceMetrics.html  VirtualThreads.html  package-summary.html  package-tree.html  package-use.html
docs/jd/: index.html  member-search-index.js  overview-summary.html  serialized-form.html  type-search-index.js
docs/jd/com/quietterminal/projectneon/: PublicAPI.html  (+1 more)
examples/: README.md
examples/chat/: ChatClient.java  ChatServer.java  README.md
examples/custom-packets/: README.md
src/main/native/: BUILD.md  CMakeLists.txt  INTEGRATION.md  README.md  neon_jni.c  project_neon.h
src/main/native/examples/: CMakeLists.txt  README.md  client_example.c  host_example.c
src/test/: README.md
src/test/java/: NeonTest.java
(+194 files in other folders)
